[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-ftpserver"
version = "0.10.0"
description = "FTP server application for Django."
readme = "README.rst"
license = "MIT"
authors = [
    {name = "Shinya Okano", email = "tokibito@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "Django>=4.2",
    "pyftpdlib",
]

[project.optional-dependencies]
windows = [
    "pywin32",
]
develop = [
    "pytest",
    "ruff",
    "pytest-django",
    "tox",
]

[project.urls]
Homepage = "https://github.com/tokibito/django-ftpserver"

[tool.setuptools.packages.find]
include = ["django_ftpserver*"]

[tool.pytest.ini_options]
django_find_project = false
pythonpath = ["tests/django_project"]
DJANGO_SETTINGS_MODULE = "project.settings"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
